# mandelbrot

./: README.md  pyproject.toml
mandelbrot/: main.py
