[tool.poetry]
name = "mandelbrot"
version = "0.1.0"
description = ""
authors = ["Alex Prestes <alex.prestes@usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
taichi = "^1.6.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
